Fix gap latest request

--- a/styles/DataBox.module.css
+++ b/styles/DataBox.module.css
@@ -30,6 +30,7 @@
 
 .last-request {
   display: flex;
+  gap: 2rem;
 }
 
 .last-request h3 {
